# tools

./: .gitattributes  .gitignore
graphlang-parser/: README.md  opium_keywords_transcript.md  pyproject.toml
graphlang-parser/docs/: ARCHITECTURE.md  COMPILER_COVERAGE.md  COMPILER_WALKTHROUGH.md  DEVELOPER_GUIDE.md  E2E_GRAPH_REFERENCE.md  E2E_LAB.md  IMPLEMENTATION_DECISIONS.md  LEARNING_ROADMAP.md  MIGRATION_GUIDE.md  OPIUM_SEMANTICS.md  QUESTIONS_FOR_COMPILER_COMPLETION.md  REVIEW_CHECKLIST.md  SEMANTIC_AUDIT_QUESTIONS.md  TESTING_STRATEGY.md
graphlang-parser/e2e/: gremlin-opium-values.yaml
graphlang-parser/opium_parser/: __init__.py  ast_nodes.py  compiler.py  compiler_common.py  compiler_match.py  compiler_projection.py  errors.py  grammar.lark  gremlin_ir.py  gremlin_renderer.py  observability.py  opium_names.py  parser.py  resource_names.py  transformer.py  types.py
graphlang-parser/scripts/: gremlin_submit.py  seed_opium_e2e.js  seed_opium_e2e.py
graphlang-parser/tests/: conftest.py  test_compiler_match.py  test_compiler_traversal.py  test_compiler_variables.py  test_e2e_gremlin_arangodb.py  test_logging.py  test_parser_get.py  test_parser_invalid.py  test_parser_match.py  test_parser_projection.py  test_parser_traversal.py
graphlang-parser/tests/compiler/: expected_gremlin.py  test_compiler_complex_semantics.py  test_compiler_errors.py  test_compiler_get.py  test_compiler_match.py  test_compiler_traversal.py  test_compiler_variables.py  test_resource_names.py  test_unresolved_placeholders.py
graphlang-parser/tests/e2e/: test_gremlin_arangodb.py
graphlang-parser/tests/fixtures/: e2e_graph.py
graphlang-parser/tests/parser/: test_ast_serialization.py  test_parser_aggregation.py  test_parser_complex.py  test_parser_documented_matrix.py  test_parser_errors.py  test_parser_get.py  test_parser_invalid.py  test_parser_match.py  test_parser_pagination.py  test_parser_projection.py  test_parser_semantic_complex.py  test_parser_traversal.py  test_parser_variables.py
graphlang-parser/tests/property/: strategies.py  test_compiler_properties.py  test_parser_properties.py
k8s-dotenv-builder/: README.md  pyproject.toml
k8s-dotenv-builder/deploy/kind-smoke/: namespace.yaml  resources.yaml  route-crd.yaml
k8s-dotenv-builder/src/review_env_exporter/: __init__.py  __main__.py  cli.py  constants.py  errors.py  exporter.py  models.py  service.py
k8s-dotenv-builder/src/review_env_exporter/providers/: __init__.py  base.py  kubernetes.py  static.py
k8s-dotenv-builder/tests/: __init__.py  conftest.py  factories.py  test_cli.py  test_integration_kind_smoke.py  test_review_env_exporter.py
mongodb-migrator/: README.md  pyproject.toml
mongodb-migrator/src/mongodb_migrator/: __init__.py  __main__.py  checkpoint.py  cli.py  connectors.py  copy_service.py  errors.py  metadata.py  migrator.py  models.py  service.py  verifier.py
mongodb-migrator/tests/: conftest.py  factories.py  real_mongo_compose.yaml  test_cli.py  test_copy_service.py  test_e2e_cli.py  test_integration_service.py  test_real_e2e_cli.py  test_real_integration.py  test_service.py
package/: README.md  pyproject.toml
package/examples/: fastapi_app.py
package/src/package/: __init__.py  exceptions.py  fastapi.py  imports.py
package/tests/: test_demo_app.py  test_exceptions.py  test_fastapi.py  test_imports.py
pvc-migrator/: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
pvc-migrator/.github/workflows/: ci.yml  e2e-kind.yml
pvc-migrator/.pvc-migrator-runs/: 0c147346573d.json  14325f1e5f43.json  19f326c718cb.json  20ca9c0ef446.json  229b6f210a66.json  3f43d59380c9.json  40eeab4e957e.json  43ca5430662f.json  476f8e0ef351.json  5107aa4b3faa.json  522ab4ffdba7.json  53cba29b822d.json  565eb253e658.json  5bb04eedf73a.json  76857d0897c6.json  7ad002f27c94.json  7b538bec05af.json  8160d202aa91.json  8481c39a4d95.json  adcf4b8c2788.json  aebf880dd2c4.json  arangodb-source-arangodb.tar  bc5f48fd7b7d.json  bfba7b89ac33.json  ccacb0ffbdf6.json  cd72083b6b6c.json  d407f2526b76.json  de6e6c671074.json  ee914e333699.json  f1658d0471d9.json  f1e615c635b1.json  source-vmstorage-vmbackup-latest.tar
pvc-migrator/docs/: architecture.md  cli.md  execution-safety.md  getting-started.md  index.md  mapping-overrides.md  runbooks.md  testing.md  workloads.md
pvc-migrator/src/pvc_migrator/: __init__.py  __main__.py  cli.py  discovery.py  engines.py  errors.py  formatting.py  mapping.py  mapping_overrides.py  models.py  preflight.py  rendering.py  runlog.py  runner.py  service.py
pvc-migrator/tests/: conftest.py  factories.py  test_cli.py  test_discovery.py  test_e2e_kind_smoke.py  test_e2e_vendor_flows.py  test_engines.py  test_formatting.py  test_integration_helm.py  test_integration_vendor_helm.py  test_mapping.py  test_mapping_overrides.py  test_models.py  test_preflight.py  test_rendering.py  test_runlog.py  test_service.py  test_service_unit.py
pvc-migrator/tests/fixtures/charts/basic-migrator-app/: Chart.yaml  values-dest.yaml  values-source.yaml  values.yaml
pvc-migrator/tests/fixtures/kind-smoke/: namespace.yaml  pvcs.yaml
rest-cache/lab/backend/: Dockerfile  README.md  pyproject.toml
rest-cache/lab/backend/tests/: test_backend.py
service-runtime/: README.md  pyproject.toml
service-runtime/src/fastapi_app_state/: __init__.py  state.py
service-runtime/src/fastapi_demo_service/: __main__.py  app.py  app_state.py  main.py  metrics.py  settings.py
service-runtime/src/fastapi_health/: __init__.py  router.py
service-runtime/src/fastapi_lifespan/: __init__.py  runtime.py
service-runtime/src/fastapi_logging/: __init__.py  logging.py
service-runtime/src/fastapi_observability/: __init__.py  telemetry.py
service-runtime/src/fastapi_settings/: __init__.py  settings.py
service-runtime/src/fastapi_state/: __init__.py  store.py
service-runtime/tests/: test_fastapi_app_state.py  test_fastapi_observability.py  test_service_config.py  test_service_demo_worker_e2e.py  test_service_demo_worker_integration.py  test_service_health.py  test_service_lifecycle.py  test_service_state.py
(+78 files in other folders)
