[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opium-parser"
version = "0.1.0"
description = "Parser and typed AST for documented Opium query expressions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
    "pydantic>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]
e2e = [
    "gremlinpython==3.8.1",
]

[tool.hatch.build.targets.wheel]
packages = ["opium_parser"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: tests that require a running ArangoDB TinkerPop Gremlin Server",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["opium_parser"]

[[tool.mypy.overrides]]
module = ["lark.*"]
ignore_missing_imports = true
