[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-env-exporter"
version = "0.1.0"
description = "Generate deterministic .env files from Kubernetes/OpenShift resource metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Ron" }
]
dependencies = [
  "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "mypy"
]
kubernetes = [
  "kubernetes>=30.1,<31.0",
]

[project.scripts]
review-env-exporter = "review_env_exporter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: opt-in tests that exercise a real cluster or external runtime",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["kubernetes", "kubernetes.*"]
ignore_missing_imports = true
