[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
version = "0.1.0"
description = "Exception handling utilities for Python packages and services."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ron" }]
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
]
dev = [
    "pytest>=8",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
