[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvc-migrator"
version = "0.1.0"
description = "Plan and execute workload-aware Kubernetes PVC migrations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Ron" }
]
dependencies = [
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "mypy",
  "mkdocs>=1.6,<2.0",
  "types-PyYAML",
]

[project.scripts]
pvc-migrator = "pvc_migrator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: integration tests using real external tools or multi-module flows",
  "e2e: end-to-end smoke tests against a real Kubernetes cluster",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
