[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-service-runtime"
version = "0.1.0"
description = "Internal FastAPI-only shared packages for service runtime, app state, and demo service support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Ron" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.6.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
  "uvicorn>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "mypy",
  "httpx>=0.27,<1.0",
]

[project.scripts]
fastapi-demo-service = "fastapi_demo_service.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
