[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest-cache-lab-backend"
version = "0.1.0"
description = "Small FastAPI backend for Varnish REST cache lab testing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ron" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<10.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
rest-cache-lab-backend = "rest_cache_lab_backend.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["rest_cache_lab_backend"]
mypy_path = "src"
